--- a/Game/index.html
+++ b/Game/index.html
@@ -9,6 +9,7 @@
         box-sizing: border-box;
         margin: 0;
         padding: 0;
+        font-family: sans-serif;
       }
 
       html,
@@ -24,18 +25,22 @@
         display: grid;
         justify-content: center;
       }
+
+      h1{
+          font-variant: small-caps;
+      }
     </style>
   </head>
 
   <body>
     <h1>Salta los obstáculos</h1>
     <canvas></canvas>
-    <h3>Usa el teclado para moverte.</h3>
+    <h3>Usa el teclado para moverte</h3>
     <p>
       <br />
       <b>FLECHAS:</b> <br />
       ARRIBA para saltar <br />
-      IZQUIERDA Y DERECHA para moverte hacia atrás y adelante.
+      IZQUIERDA Y DERECHA para moverte hacia atrás y adelante
     </p>
 
     <script src="game.js" type="text/javascript"></script>
