--- a/Geolocation/geolocation.html
+++ b/Geolocation/geolocation.html
@@ -4,9 +4,11 @@
     <title>Geolocation</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <script src="index.js"></script>
+    <script src="geolocation.js"></script>
   </head>
   <body>
+      
+    <div id="coord"></div>
     <div id="map"></div>
 
     <script
